--- a/style/home.css
+++ b/style/home.css
@@ -16,6 +16,8 @@ header {
     grid-area: left;
 
     background: url('/assets/home-bg-img.svg') no-repeat top/contain;
+    /* Altera somente o background e não a div, assim a div não quebra a tela */
+    background-position: -10rem;
 }
 
 main {
@@ -23,6 +25,7 @@ main {
 
     display: flex;
     align-items: center;
+    margin-top: -12rem;
 }
 
 main .container {
@@ -44,4 +47,55 @@ input {
 input, button, .button {
     width: 100%;
     margin-bottom: 1.8rem;
+}
+
+/* SEPARATOR */
+
+.separator {
+    display: flex;
+    align-items: center;
+
+    margin: 4rem 0;
+}
+
+/* Aplica a propriedade CSS somente nos elementos filhos escolhidos, nesse caso somente ao elemento 1 e 3, que são as barras */
+
+.separator div:nth-child(2) {
+    color: var(--grey-blue);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    padding: 0 1.35rem;
+    line-height: 0;
+}
+
+.separator div:nth-child(1),
+.separator div:nth-child(3) {
+    background: var(--grey-blue);
+    width: 100%;
+    height: 1px;
+}
+
+/* create balls */
+
+.ball {
+    background: var(--blue);
+    width: 21.2rem;
+    height: 21.2rem;
+    clip-path: circle();
+    opacity: .1;
+
+    position: fixed;
+}
+
+.ball.top { 
+    top: -45rem;
+    right: -35rem;
+
+    width: 63.3rem;
+    height: 63.3rem;
+}
+
+.ball.bottom {
+    right: 5.6rem;
+    bottom: -15rem;
 }
