--- a/style/global.css
+++ b/style/global.css
@@ -10,7 +10,7 @@ html {
     --black: #0D114F;
     --white: #FAFAFA;
     --red: #E83F5B;
-    --light-blue: #30ECFF;
+    --light-blue: #E0ECFF;
     --blue: #3485FF;
     --background: #f6faff;
     --overlay: #040911;
@@ -19,6 +19,7 @@ html {
     --grey-dark: #4D5E77; 
     --grey-blue: #A1B2CD;
     --grey-light: #E5EAF1;
+    --grey-medium: #EAECF2;
 
     font-size: 62.5%; /* 62.5% equivalente a 10px*/
 
@@ -89,7 +90,7 @@ button:hover, .button:hover {
     filter: brightness(1.2);
 }
 
-button > img 
+button > img, 
 .button > img {
     margin-right: 1rem;
     width: 2rem;
@@ -101,6 +102,20 @@ button.outlined,
     color: var(--blue);
     border: .2rem solid var(--blue);
 }
+
+button.red,
+.button.red {
+    background: var(--red);
+    color: var(--white);
+}
+
+button.grey,
+.button.grey {
+    background: var(--grey-light);
+    color: var(--grey-dark);
+}
+
+/* HEADER */
 
 .content header {
     width: 80%;
