--- a/style/home.css
+++ b/style/home.css
@@ -81,6 +81,8 @@ input, button, .button {
     background: var(--blue);
     width: 21.2rem;
     height: 21.2rem;
+
+    /* Configuração especial de CSS */
     clip-path: circle();
     opacity: .1;
 
