--- a/style/room.css
+++ b/style/room.css
@@ -93,3 +93,60 @@
     padding: .8rem 2.4rem;
     line-height: 2.4rem;
 }
+
+/* questions */
+
+.questions-wrapper {
+    background: var(--light-blue);
+    margin-bottom: .8rem;
+    border-radius: 0 .8rem .8rem .8rem;
+    padding: 2.4rem;
+}
+
+.questions-wrapper .question-content {
+    display: flex;
+    align-items: flex-start;
+}
+
+.questions-wrapper .question-content .user {
+    background: var(--blue);
+    clip-path: circle();
+    padding: 1.4rem;
+}
+
+.questions-wrapper .question-content p {
+    margin-left: 1.6rem;
+    word-break: break-word;
+    
+    display: flex;
+    align-items: center;
+    min-height: 5.5rem;
+}
+
+.questions-wrapper .actions {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.questions-wrapper .actions > a {
+    display: flex;
+    align-items: center;
+}
+
+.questions-wrapper .actions > a > img {
+    margin-right: .8rem;
+}
+/*                            a + a (daria o mesmo resultado)    */
+.questions-wrapper .actions > a:nth-child(2) {
+    margin-left: 2.4rem;
+}
+
+/* Question read */
+.questions-wrapper.read {
+    background: var(--grey-medium);
+}
+
+.questions-wrapper.read .question-content .user {
+    background: var(--grey-blue);
+}
