--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -28,7 +28,7 @@
             </a>
 
             <div class="buttons">
-                <div class="button outlined">
+                <div class="button outlined" id="room-id" data-id="323243">
                     #323243
                     <img src="images/copy.svg" alt="Copiar número da sala"/>
                 </div>
@@ -74,11 +74,11 @@
                     </div>
 
                     <div class="actions">
-                        <a href="#" class="check">
+                        <a href="#" class="check" data-id="2"> 
                             <img src="images/check.svg" alt="Marcar como lida">
                             Marcar como lida
                         </a>
-                        <a href="#" class="delete">
+                        <a href="#" class="delete" data-id="2">
                             <img src="images/trash.svg" alt="Excluir">
                             Excluir
                         </a>
@@ -99,11 +99,11 @@
                     </div>
 
                     <div class="actions">
-                        <a href="#" class="check">
+                        <a href="#" class="check" data-id="3">
                             <img src="images/check.svg" alt="Marcar como lida">
                             Marcar como lida
                         </a>
-                        <a href="#" class="delete">
+                        <a href="#" class="delete" data-id="3">
                             <img src="images/trash.svg" alt="Excluir">
                             Excluir
                         </a>
@@ -124,11 +124,11 @@
                     </div>
 
                     <div class="actions">
-                        <a href="#" class="check">
+                        <a href="#" class="check" data-id="4">
                             <img src="images/check.svg" alt="Marcar como lida">
                             Marcar como lida
                         </a>
-                        <a href="#" class="delete">
+                        <a href="#" class="delete" data-id="4">
                             <img src="images/trash.svg" alt="Excluir">
                             Excluir
                         </a>
@@ -149,11 +149,11 @@
                     </div>
 
                     <div class="actions">
-                        <a href="#" class="check">
+                        <a href="#" class="check" data-id="1">
                             <img src="images/check.svg" alt="Marcar como lida">
                             Marcar como lida
                         </a>
-                        <a href="#" class="delete">
+                        <a href="#" class="delete" data-id="1">
                             <img src="images/trash.svg" alt="Excluir">
                             Excluir
                         </a>
