--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -28,12 +28,12 @@
             </a>
 
             <div class="buttons">
-                <div class="button outlined" id="room-id" data-id="323243">
-                    #323243
+                <div class="button outlined" id="room-id" data-id="<%= roomId %>">
+                    #<%= roomId %>
                     <img src="/images/copy.svg" alt="Copiar número da sala"/>
                 </div>
 
-                <a href="#" class="button">
+                <a href="/create-pass" class="button">
                     <img src="/images/users-white.svg" alt="Criar uma sala"/>
                     Criar sala
                 </a>
@@ -43,7 +43,7 @@
         <main>
             <section id="question-form">
                 <h2>Faça sua pergunta</h2>
-                <form action="">
+                <form action="/question/create/<%= roomId %>" method="POST">
                     <label for-id="question" class="sr-only">O que você quer perguntar</label>
                     <textarea name="question" id="question" placeholder="O que você quer perguntar"></textarea>
 
@@ -59,106 +59,67 @@
 
             <section id="questions">
                 <h2 class="sr-only">Perguntas da comunidade</h2>
+
+                <% if (isNoQuestions) { %>
+                    <%- include('parts/noquestion') %>
+                <% } %>
                 
-                <div class="questions-wrapper">
-                    <div class="question-content">
+                <% questions.forEach(question => { %>
 
-                        <div class="user">
-                            <img src="/images/avatar-cinza.svg" alt="">
+                    <div class="questions-wrapper">
+                        <div class="question-content">
+    
+                            <div class="user">
+                                <img src="/images/avatar-cinza.svg" alt="">
+                            </div>
+    
+                            <div class="question">
+                                <p> <%= question.title %> </p>
+                            </div>
+    
                         </div>
-
-                        <div class="question">
-                            <p>Qual a diferença entre const, var e let em Javascript? </p>
+    
+                        <div class="actions">
+                            <a href="#" class="check" data-id="<%= question.id %>"> 
+                                <img src="/images/check.svg" alt="Marcar como lida">
+                                Marcar como lida
+                            </a>
+                            <a href="#" class="delete" data-id="<%= question.id %>">
+                                <img src="/images/trash.svg" alt="Excluir">
+                                Excluir
+                            </a>
                         </div>
-
                     </div>
 
-                    <div class="actions">
-                        <a href="#" class="check" data-id="2"> 
-                            <img src="/images/check.svg" alt="Marcar como lida">
-                            Marcar como lida
-                        </a>
-                        <a href="#" class="delete" data-id="2">
-                            <img src="/images/trash.svg" alt="Excluir">
-                            Excluir
-                        </a>
-                    </div>
-                </div>
+                <% }); %>
 
-                <div class="questions-wrapper">
-                    <div class="question-content">
-
-                        <div class="user">
-                            <img src="/images/avatar-cinza.svg" alt="">
+                <% questionsRead.forEach(questionRead => { %>
+                    <div class="questions-wrapper read">
+                        <div class="question-content">
+    
+                            <div class="user">
+                                <img src="/images/avatar-cinza.svg" alt="">
+                            </div>
+    
+                            <div class="question">
+                                <p> <%= questionRead.title %> </p>
+                            </div>
+    
                         </div>
-
-                        <div class="question">
-                            <p>O que é Javascript</p>
+    
+                        <div class="actions">
+                            <a href="#" class="check" data-id="<%= questionRead.id %>">
+                                <img src="/images/check.svg" alt="Marcar como lida">
+                                Marcar como lida
+                            </a>
+                            <a href="#" class="delete" data-id="<%= questionRead.id %>">
+                                <img src="/images/trash.svg" alt="Excluir">
+                                Excluir
+                            </a>
                         </div>
-
                     </div>
+                <% }) %>
 
-                    <div class="actions">
-                        <a href="#" class="check" data-id="3">
-                            <img src="/images/check.svg" alt="Marcar como lida">
-                            Marcar como lida
-                        </a>
-                        <a href="#" class="delete" data-id="3">
-                            <img src="/images/trash.svg" alt="Excluir">
-                            Excluir
-                        </a>
-                    </div>
-                </div>
-
-                <div class="questions-wrapper">
-                    <div class="question-content">
-
-                        <div class="user">
-                            <img src="/images/avatar-cinza.svg" alt="">
-                        </div>
-
-                        <div class="question">
-                            <p>Para ocultar um elemento em um documento utilizando CSS, pode-se alterar a propriedade “display” para “none”, ou “visibility” para “hidden”. Qual a diferença entre essas propriedades? Obrigado desde já!!  </p>
-                        </div>
-
-                    </div>
-
-                    <div class="actions">
-                        <a href="#" class="check" data-id="4">
-                            <img src="/images/check.svg" alt="Marcar como lida">
-                            Marcar como lida
-                        </a>
-                        <a href="#" class="delete" data-id="4">
-                            <img src="/images/trash.svg" alt="Excluir">
-                            Excluir
-                        </a>
-                    </div>
-                </div>
-
-                <div class="questions-wrapper read">
-                    <div class="question-content">
-
-                        <div class="user">
-                            <img src="/images/avatar-cinza.svg" alt="">
-                        </div>
-
-                        <div class="question">
-                            <p>O que é TypeScript? </p>
-                        </div>
-
-                    </div>
-
-                    <div class="actions">
-                        <a href="#" class="check" data-id="1">
-                            <img src="/images/check.svg" alt="Marcar como lida">
-                            Marcar como lida
-                        </a>
-                        <a href="#" class="delete" data-id="1">
-                            <img src="/images/trash.svg" alt="Excluir">
-                            Excluir
-                        </a>
-                    </div>
-                </div>
             </section>
         </main>
     </div>
